# mvp_analise_de_dados

./: MVP_analise_de_dados.ipynb  pyproject.toml
